--- a/authentication-typescript/template/package.json
+++ b/authentication-typescript/template/package.json
@@ -12,29 +12,38 @@
         "test": "jest"
     },
     "dependencies": {
+        "@brightlayer-ui/colors": "^4.0.0",
+        "@brightlayer-ui/icons-svg": "^1.14.0",
         "@brightlayer-ui/react-native-auth-workflow": "^6.0.0",
         "@brightlayer-ui/react-native-components": "^8.0.2",
         "@brightlayer-ui/react-native-themes": "^7.0.0",
         "@brightlayer-ui/react-native-vector-icons": "^2.2.0",
-        "@react-native-async-storage/async-storage": "^1.23.1",
-        "@react-navigation/drawer": "^6.6.15",
-        "@react-navigation/native": "^6.1.17",
+        "@react-native-async-storage/async-storage": "^1.22.3",
+        "@react-native-community/masked-view": "^0.1.10",
+        "@react-navigation/drawer": "^6.6.6",
+        "@react-navigation/native": "^6.1.9",
         "@react-navigation/native-stack": "^6.9.26",
-        "i18next": "^23.11.3",
+        "@react-navigation/stack": "^6.3.20",
+        "date-fns": "^2.19.0",
+        "i18next": "^23.7.16",
         "intl-pluralrules": "^2.0.1",
         "react": "18.2.0",
-        "react-i18next": "^14.1.1",
-        "react-native": "0.74.1",
-        "react-native-gesture-handler": "^2.16.2",
-        "react-native-pager-view": "^6.3.1",
-        "react-native-paper": "^5.0.0",
-        "react-native-reanimated": "^3.11.0",
+        "react-i18next": "^14.0.0",
+        "react-native": "0.73.2",
+        "react-native-gesture-handler": "^2.14.1",
+        "react-native-keyboard-aware-scroll-view": "^0.9.3",
+        "react-native-modal": "^12.0.2",
+        "react-native-pager-view": "^6.2.3",
+        "react-native-paper": "^5.12.1",
+        "react-native-reanimated": "^3.6.1",
         "react-native-restart": "^0.0.27",
-        "react-native-safe-area-context": "^4.0.0",
-        "react-native-screens": "^3.31.1",
+        "react-native-safe-area-context": "^4.8.2",
+        "react-native-screens": "^3.29.0",
         "react-native-select-dropdown": "^3.4.0",
+        "react-native-svg": "^12.1.0",
+        "react-native-svg-transformer": "^1.3.0",
         "react-native-vector-icons": "^9.2.0",
-        "react-native-webview": "^13.10.0"
+        "react-native-webview": "^13.8.1"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
